--- a/ex005/index.html
+++ b/ex005/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     
+
+metros 1:<input id="metros">
+<button type="button"id="btconverter" onclick="convertercentimetros()">converter</button>
+<div id="resposta"></div>
+<script src="app.js"></script>
 </body>
 </html>
